# VigenereSolver-ng

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RESULTS.md  config.toml  language_data.json  pyproject.toml  requirements.txt  setup.py  solver.py  tableu.py  utils.py
.github/workflows/: ci.yml  deploy-web.yml  new.yml
SolverSite/: app.py  solver.py  utils.py
SolverSite/ciphertexts/: out.txt  t1.txt
SolverSite/static/: style.css
SolverSite/templates/: base.html  how.html  howto.html  index.html  results.html
acquisition/: freqs.sh
api/: server.py
artifacts/bench/: results.csv  summary.json  summary.md
auto_cover_letter_bundle/: README.md  applicant_profile.example.json  auto_cover_letter_gpt.py  dry_run_payload.json  jobs.example.json
auto_cover_letter_bundle/generated_cover_letters/: resecurity-dark-web-threat-analyst.audit.json  resecurity-dark-web-threat-analyst.md  resecurity-dark-web-threat-analyst.tex  resecurity-dark-web-threat-analyst.txt
bench_corpus/: manifest.json
bench_corpus/sample_001/: ciphertext.txt  key.txt  plaintext.txt
bench_corpus/sample_002/: ciphertext.txt  key.txt  plaintext.txt
bench_corpus/sample_003/: ciphertext.txt  key.txt  plaintext.txt
bench_corpus/sample_004/: ciphertext.txt  key.txt  plaintext.txt
bench_corpus/sample_005/: ciphertext.txt  key.txt  plaintext.txt
bench_corpus/sample_006/: ciphertext.txt  key.txt  plaintext.txt
bench_corpus/sample_007/: ciphertext.txt  key.txt  plaintext.txt
bench_corpus/sample_008/: ciphertext.txt  key.txt  plaintext.txt
ciphertexts/: kafka_ct.txt  tests.txt
data/: english_bigrams_1.txt  english_monograms.txt  english_quadgrams.txt  english_trigrams.txt  quintgram.txt
docs/: API.md  BUILDING.md  CLI.md  THEORY.md
raw_text/: kafka.txt  letter-raw.txt
scripts/: full_benchmark.py  generate_corpus.py
src/core/: cipher.py
tests/: conftest.py  test_alphabet.py  test_cli.py  test_compare.py  test_confidence.py  test_keylength.py  test_language.py  test_match.py  test_progress_jobs.py  test_random_english_bench.py  test_refine.py  test_review_fixes.py  test_scoring.py  test_search.py  test_solver.py  test_stats.py  test_tune_optimize.py  test_twist.py
vigenere_solver/: __init__.py  bench.py  cli.py  config.py  data.py  hooks.py  kasiski.py  kenlm_model.py  lm.py  lm_classic.py  periodogram.py  solver.py  utils.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+77 files in other folders)
